[gd_scene load_steps=15 format=3 uid="uid://dg0io0m1wcmd7"]

[ext_resource type="Theme" uid="uid://dhvsei0a7jp3j" path="res://GlobalTheme.tres" id="1_enjhb"]
[ext_resource type="Script" uid="uid://lh6xedgmm6cc" path="res://Scenes/MainMenu/main_menu.gd" id="2_wgsk1"]
[ext_resource type="Texture2D" uid="uid://cst5l3nikk368" path="res://images/interface/aeugh.png" id="3_fv0xt"]
[ext_resource type="FontFile" uid="uid://d05yajp3iubii" path="res://fonts/SpaceGrotesk-Bold.ttf" id="4_kpx3y"]
[ext_resource type="Texture2D" uid="uid://cwlk76wvhkr8t" path="res://images/interface/STARTBUTTON.png" id="4_vapy7"]
[ext_resource type="Texture2D" uid="uid://4eybmh3oaq4y" path="res://images/interface/resetBUTTON.png" id="5_8qovt"]
[ext_resource type="Texture2D" uid="uid://cqjdi5y5c56sm" path="res://images/interface/exitBUTTON.png" id="6_0hjx5"]
[ext_resource type="Texture2D" uid="uid://oun2ubeh023h" path="res://images/interface/BOX.png" id="7_8qovt"]
[ext_resource type="Texture2D" uid="uid://c72r7at7myoaa" path="res://images/interface/crime.jpg" id="8_0hjx5"]

[sub_resource type="Animation" id="Animation_rhvpn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardControl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_24hy8"]
resource_name = "start"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardControl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CardControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa7jw"]
_data = {
&"RESET": SubResource("Animation_rhvpn"),
&"start": SubResource("Animation_24hy8")
}

[sub_resource type="InputEventAction" id="InputEventAction_dwmcf"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_ui17c"]
events = [SubResource("InputEventAction_dwmcf")]

[node name="MainMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_enjhb")
script = ExtResource("2_wgsk1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pa7jw")
}

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.752941)

[node name="TextureRect" type="ParallaxBackground" parent="Shadow"]
scroll_ignore_camera_zoom = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="Parallax2D" parent="Shadow/TextureRect"]
texture_filter = 1
repeat_size = Vector2(1483.87, 868.095)
autoscroll = Vector2(50, 20)
repeat_times = 3

[node name="TextureRect" type="TextureRect" parent="Shadow/TextureRect/TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 1993.0
offset_bottom = 1125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fv0xt")

[node name="CardControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="TextureRect" parent="CardControl"]
layout_mode = 0
offset_left = 131.0
offset_top = 109.0
offset_right = 1780.0
offset_bottom = 973.0
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="CardControl/Card"]
modulate = Color(0.217701, 0.217701, 0.217701, 1)
layout_mode = 0
offset_left = 181.0
offset_right = 1480.0
offset_bottom = 103.0
theme = ExtResource("1_enjhb")
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("4_kpx3y")
theme_override_font_sizes/font_size = 80
text = "NAZWA GRY"
horizontal_alignment = 1

[node name="ExtraText" type="Label" parent="CardControl/Card"]
layout_mode = 0
offset_left = 1173.0
offset_top = 100.0
offset_right = 1541.0
offset_bottom = 206.0
theme = ExtResource("1_enjhb")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Control Scheme"
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="CardControl/Card"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_top = -0.018518519
offset_left = 200.0
offset_top = 100.0
offset_right = 566.0
offset_bottom = 196.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_ui17c")
shortcut_in_tooltip = false
texture_normal = ExtResource("4_vapy7")
stretch_mode = 0

[node name="ResetSaveButton" type="TextureButton" parent="CardControl/Card"]
texture_filter = 1
layout_mode = 0
offset_left = 200.0
offset_top = 220.0
offset_right = 566.0
offset_bottom = 325.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_ui17c")
shortcut_in_tooltip = false
texture_normal = ExtResource("5_8qovt")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="CardControl/Card"]
texture_filter = 1
layout_mode = 0
offset_left = 200.0
offset_top = 340.0
offset_right = 566.0
offset_bottom = 457.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_ui17c")
shortcut_in_tooltip = false
texture_normal = ExtResource("6_0hjx5")
stretch_mode = 0

[node name="ColorRect" type="TextureRect" parent="CardControl/Card"]
texture_filter = 1
layout_mode = 0
offset_left = 1183.0
offset_top = 163.0
offset_right = 1533.0
offset_bottom = 796.0
texture = ExtResource("7_8qovt")

[node name="Label" type="Label" parent="CardControl/Card/ColorRect"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.2784314, 0.1764706, 0.23529412, 1)
text = "UP: W
LEFT: A
RIGHT: D
DOWN: S
SHOOT: MOUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = 690.0
offset_top = 323.0
offset_right = 1292.0
offset_bottom = 925.0
texture = ExtResource("8_0hjx5")
expand_mode = 2
stretch_mode = 5

[connection signal="pressed" from="CardControl/Card/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CardControl/Card/ResetSaveButton" to="." method="_on_reset_save_button_pressed"]
[connection signal="pressed" from="CardControl/Card/ExitButton" to="." method="_on_exit_button_pressed"]
